finish assigment-03